[package]
name = "competitive"
version = "0.1.0"
authors = ["furuhama <furuhama@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9.3"
ascii = "1.1.0"
bitset-fixed = "0.1.0"
either = "1.9.0"
fixedbitset = "0.4.2"
getrandom = "0.2.13"
im-rc = "15.1.0"
indexmap = "2.2.3"
itertools = "0.12.1"
itertools-num = "0.1.3"
lazy_static = "1.4.0"
libm = "0.2.8"
maplit = "1.0.2"
# nalgebra = "0.20.0"
# ndarray = "0.13.0"
num = "0.4.1"
num-bigint = "0.4.4"
num-complex = "0.4.5"
num-derive = "0.4.1"
num-integer = "0.1.46"
num-iter = "0.1.44"
num-rational = "0.4.1"
num-traits = "0.2.18"
ordered-float = "4.2.0"
petgraph = "0.6.4"
permutohedron = "0.2.4"
proconio = { version = "0.4.5", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
regex = "1.10.3"
rustc-hash = "1.1.0"
smallvec = "1.13.1"
superslice = "1.0.0"
text_io = "0.1.12"
whiteread = "0.5.0"

[profile.release]
lto = true
panic = 'abort'
